workout summary on all pages at the bottom

--- a/MovePigMove.Web/Views/Shared/_Layout.cshtml
+++ b/MovePigMove.Web/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
             <section class="content-wrapper main-content clear-fix">
                 @RenderBody()
             </section>
+            
+           @Html.Action("_Summary", "Workout");
+
         </div>
         <footer>
             <div class="content-wrapper">
