--- a/MovePigMove.Web/Views/Workout/_Summary.cshtml
+++ b/MovePigMove.Web/Views/Workout/_Summary.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IList<MovePigMove.Core.Entities.Workout>
 
-@Model.Count
+<h3>Summary</h3>
 
-@foreach(var w in Model)
+@foreach(var w in Model.Where(x => x.CardioSegments.Any() || x.StrengthSegments.Any()))
 {
-    @w.StartDate <text>-</text> @w.EndDate
+    @w.StartDate.ToShortDateString()
     <br/>
     
     if (w.CardioSegments.Count() > 0)
@@ -13,7 +13,7 @@
         <br />
         foreach(var ex in w.CardioSegments)
         {
-            @ex.ExerciseId <text>for</text> @ex.Duration <text>minutes.</text><br/>
+            Html.Raw(string.Format("{0} minutes of {1} at {2}", ex.Duration, ex.ExerciseDescription, ex.Level));
         }
     }
     
@@ -25,7 +25,6 @@
         {
             @ex.ExerciseId <text>of</text> @ex.Repetitions <text>at</text> @ex.Weight <br />
         }
-        
     }
     
     <hr />
