ready to try for real

--- a/MovePigMove.Web/Views/Exercises/Index.cshtml
+++ b/MovePigMove.Web/Views/Exercises/Index.cshtml
@@ -6,8 +6,6 @@
 
 <div class="post_title">
     <h1>Exercise List</h1>
-    <span>Posted by <a href="#" title="John Smith">John Smith</a> on July 5th in <a href="#" title="General">General</a>.</span>
-</div>
 
 
 
@@ -39,4 +37,4 @@
         <option value="cardio">Cardio</option>
     </select>
     <input type="submit" value="Add" />
-}
+}</div>
