--- a/MovePigMove.Web/Views/Workout/_Summary.cshtml
+++ b/MovePigMove.Web/Views/Workout/_Summary.cshtml
@@ -1,30 +1,31 @@
 ﻿@model IList<MovePigMove.Core.Entities.Workout>
 
-<h3>Summary</h3>
 
 @foreach(var w in Model.Where(x => x.CardioSegments.Any() || x.StrengthSegments.Any()))
 {
-    @w.StartDate.ToShortDateString()
+    <h3>@w.StartDate.ToShortDateString()</h3>
     <br/>
     
     if (w.CardioSegments.Count() > 0)
     {
         <strong>Cardio</strong>
-        <br />
-        foreach(var ex in w.CardioSegments)
+        <p>
+        @foreach(var ex in w.CardioSegments)
         {
-            Html.Raw(string.Format("{0} minutes of {1} at {2}", ex.Duration, ex.ExerciseDescription, ex.Level));
+            @Html.Raw(string.Format("{0} minutes of {1} at {2}<br />", ex.Duration, ex.ExerciseDescription, ex.Level));
         }
+        </p>
     }
     
     if (w.StrengthSegments.Count() > 0)
     {
         <strong>Strength</strong>
-        <br/>
-        foreach (var ex in w.StrengthSegments)
-        {
-            @ex.ExerciseId <text>of</text> @ex.Repetitions <text>at</text> @ex.Weight <br />
-        }
+        <p>
+            @foreach (var ex in w.StrengthSegments)
+            {
+                @Html.Raw(string.Format("{0} : {1} reps of {2} lbs.", ex.ExerciseDescription, ex.Repetitions, ex.Weight));
+            }
+        </p>
     }
     
     <hr />
